[workspace]
members = [
  "rust/lambdas/question-handler",
  "rust/types",
]
resolver = "2"

[workspace.dependencies]
lambda_runtime = { version = "0.13", default-features = false }
tokio = { version = "1.16", features = [
  "macros",
  "io-util",
  "sync",
  "rt-multi-thread",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.1"
aws-sdk-s3 = "1.40.0"
aws-sdk-dynamodb = "1.39.1"
regex = "1.10.5"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
bs58 = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
