[workspace]
members = [
  "rust/lambdas/question-handler",
  "rust/lambdas/question-stage-handler",
  "rust/lambdas/question-list-handler",
  "rust/lambdas/user-handler",
  "rust/lambdas/index-handler",
  "rust/lambdas/payments-handler",
  "rust/types",
  "rust/wasm_mod",
  "rust/lambda_utils",
]
resolver = "2"

[workspace.dependencies]
lambda_runtime = { version = "0.13", default-features = false }
tokio = { version = "1.16", features = [
  "macros",
  "io-util",
  "sync",
  # it intentionally does not include "rt" or "rt-multi-thread" because of the conflicting
  # capabilities between WASM and full environments
  # add one of these two features to the individual lambda crates
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test-log = { version = "0.2.16", features = [
  "trace",
], default-features = false }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.1"
aws-sdk-s3 = "1.40.0"
aws-sdk-dynamodb = "1.39.1"
aws-sdk-sesv2 = "1"
regex = "1.10.5"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10.8"
hex = "0.4.3"
bs58 = "0.5.1"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
