[package]
name = "lambda_utils"
version = "0.1.0"
edition = "2021"
authors = ["rimutaka <max@onebro.me>"]
description = "Shared types and functions for lambda functions"
license = "GPL 3.0"

[dependencies]
bitie_types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = "9.3.0"
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
pulldown-cmark = "0.12.1"

# wasm-related dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.49"

# All Web APIs have to be enabled explicitly here 
# see https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3"
features = ["console"]
