[package]
name = "bitie_types"
version = "0.1.0"
edition = "2021"
authors = ["rimutaka <max@onebro.me>"]
description = "Shared types and models for bitie"
license = "GPL 3.0"

[dependencies]
bitie_wasm_types = { path = "../wasm_types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = "9.3.0"
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
