[package]
name = "wasm_mod"
version = "0.1.0"
edition = "2021"
authors = ["rimutaka <max@onebro.me>"]
description = "Rust helpers"
license = "AGPL 3.0"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasm-related dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# everything else
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
pulldown-cmark = "0.12.1"

# All Web APIs have to be enabled explicitly here 
# see https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3"
features = ["console"]
