[package]
name = "bitie_wasm_types"
version = "0.1.0"
edition = "2021"
authors = ["rimutaka <max@onebro.me>"]
description = "WASM-safe shared types and models for bitie"
license = "GPL 3.0"

[dependencies]
# wasm-related dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.49"

# everything else
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pulldown-cmark = "0.12.1"

# All Web APIs have to be enabled explicitly here 
# see https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3"
features = ["console"]
