[package]
name = "question-list-handler"
version = "0.2.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2021"
description = "A gateway to DDB questions table for handling lists of questions"
license = "AGPL-3.0"

[dependencies]
bitie_types = { path = "../../types" }
lambda_utils = { path = "../../lambda_utils" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }